compiler plugin now inherits from the root POM
Signed-off-by: mariano.barcia <mariano.barcia@gmail.com>